# Sistem_mobil_cu_traseu_programabil

./: LICENSE  README.md
CODE/app_code/: CMakeLists.txt  main.cpp
CODE/esp32_code/: CMakeLists.txt
CODE/esp32_code/main/: CMakeLists.txt  main.c
